working version: весь базовый функционал работает